# chem279-Waseem-hw

./: CMakeLists.txt  README  truncation_error_Problem2.txt
include/: LJ_PE.h  file_io.h
sample_input/Force/: 2.txt  3.txt
src/: LJ_PE.cpp  Plotting_turnication_error.py  file_io.cpp  main.cpp  truncation_error_Problem2.txt
